# ibus-sayura

./: AUTHORS  ChangeLog  Makefile.am  README  configure.ac  ibus-sayura.spec.in
icons/: Makefile.am
m4/: Makefile.am
po/: Makevars  zh_CN.po
src/: .Makefile.am.swp  Makefile.am  engine.c  engine.h  main.c  sayura.xml.in.in
src/.deps/: ibus_engine_sayura-engine.Po  ibus_engine_sayura-main.Po
